--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-web": "~0.19.10",
+    "react-native-web-refresh-control": "^1.1.2",
     "react-native-webview": "13.8.6"
   },
   "devDependencies": {
